compilateurDeca/src/test/deca/context/valid/not_sorted/cast.deca
// Description:
//    Sans-Objet
//    Affectation et expressions de base
//  
//
// Resultats:
//    compilation bonne
//        
// 
// Historique:
//    cree le 06/01/2026

{
    int a = 10;
    
    float b = (float)(a);

    int c = (int)(b);

    int d = (int)(c);

    float e = (float)(b);
}